Menu fix on Safari

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 }
 
 .list-element {
-  padding: 10px;
+  padding: 15px 10px;
   position: relative;
   color: #fff;
 }
